widget, calendar, and alarm updates. Google Calendar signin now also working

--- a/composeApp/src/androidMain/res/xml/network_security_config.xml
+++ b/composeApp/src/androidMain/res/xml/network_security_config.xml
@@ -9,7 +9,7 @@
 
     <domain-config cleartextTrafficPermitted="false">
         <domain includeSubdomains="true">raw.githubusercontent.com</domain>
-        <domain includeSubdomains="true">calendarific.com</domain>
+        <domain includeSubdomains="true">kayaposoft.com</domain>
         <trust-anchors>
             <certificates src="system" />
             <certificates src="user" />
